--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@dicebear/avatars-avataaars-sprites": "^4.9.1",
     "faker": "^5.5.3",
     "json-server": "^0.16.3",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1"
   },
   "eslintConfig": {
     "extends": [
