--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.27.2",
     "react": "^17.0.2",
+    "react-combine-reducers": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
