--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-combine-reducers": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
