--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.39.1",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.13.3",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
