--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-query": "^3.39.1",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.13.3",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -58,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5.3.5"
   }
 }
